--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USER}
-#spring.datasource.password=${DB_PASSWORD}
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/newsfeed
-spring.datasource.username=root
-spring.datasource.password=4680
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
