--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,9 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 
 	//spring email
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.3'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // email html 용
+
 }
 
 tasks.named('bootBuildImage') {
